--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -47,23 +47,23 @@ cursor:
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Source Code Pro
+    family: SauceCodePro Nerd Font Mono
     # Style can be specified to pick a specific face.
-    style: Regular
+    style: regular
 
   # The bold font face
   bold:
-    family: Source Code Pro
+    family: SauceCodePro Nerd Font Mono
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: Source Code Pro
+    family: SauceCodePro Nerd Font Mono
     # Style can be specified to pick a specific face.
     style: Italic
 
-  size: 11.0
+  size: 9.5
 
   ligatures: true
 
